tests/compile_errors/object-prop-immutable-value.buzz
// Wrong property type
object Immutable {
    data: mut [int]
}

test "Should not be able to give immutable list to data field" {
    _ = Immutable{
        data = [],
    };
}
